klee2.7/examples/regexp/klee-out-7/test000007.pc
array arr1[7] : w32 -> w8 = symbolic
(query [(Eq false
            (Eq 42 N0:(Read w8 1 arr1)))
        (Eq 111 (Read w8 0 arr1))
        (Eq false (Eq 0 N0))
        (Eq 42 (Read w8 2 arr1))
        (Eq false
            (Eq 0 (Read w8 3 arr1)))
        (Eq 42 (Read w8 4 arr1))
        (Eq false
            (Eq 0 (Read w8 5 arr1)))
        (Eq 42 (Read w8 6 arr1))]
       false)
